# vikas-phatak.github.io

./: .gitignore  CNAME  LICENSE  README.md  hugo.toml  pyproject.toml  vikas-phatak-personal-blog-wf-proposal.md
.gemini/config/plugins/hugo-blog-workflow/: plugin.json
.gemini/config/plugins/hugo-blog-workflow/agents/: blog-editor-in-chief.md  hugo-publisher.md
.gemini/config/plugins/hugo-blog-workflow/skills/blog-seo-auditor/: SKILL.md
.gemini/config/plugins/hugo-blog-workflow/skills/code-snippet-verifier/: SKILL.md
.gemini/config/plugins/hugo-blog-workflow/skills/hugo-content-master/: SKILL.md
.gemini/config/plugins/hugo-blog-workflow/skills/social-syndication/: SKILL.md
.github/workflows/: deploy-hugo.yml
assets/css/: main.css
content/: _index.md
content/posts/building-agents-with-langgraph/: index.md
content/posts/building-resilient-opc-ua-pipelines-in-gxp-environments/: index.md
content/posts/welcome-to-agentic-blog/: index.md
content/posts/welcome-to-engineering-dispatches/: index.md
layouts/: index.html
layouts/_default/: baseof.html  list.html  single.html
layouts/partials/: footer.html  head.html  scripts.html  statusbar.html
scripts/: init_post.py  local_preview.sh  setup_env.sh
static/: CNAME
workflow/: __init__.py  config.py  orchestrator.py
workflow/agents/: __init__.py  base_agent.py  editor.py  researcher.py  syndicator.py  verifier.py  writer.py
workflow/git_ops/: __init__.py  publisher.py
workflow/templates/: frontmatter_schema.yaml
