[project]
name = "hugo-blog-workflow"
version = "0.1.0"
description = "Autonomous Agent-Driven Hugo Blog Workflow Management System"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "pyyaml>=6.0.1",
    "httpx>=0.27.0",
]

[project.scripts]
blog-workflow = "workflow.orchestrator:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflow"]
